# DigitalVox3

./: .gitignore  README.md  imgui.ini
time_perf_tests/: CMakeLists.txt  bvh3_tests.cpp  fdm_linear_systems_tests.cpp  list_query_engine3_tests.cpp  main.cpp  matrix_mxn_tests.cpp  octree_tests.cpp  parallel_tests.cpp  particle_system_solver3_tests.cpp  point_hash_grid_searcher3_tests.cpp  point_kdtree_searcher3_tests.cpp  point_parallel_hash_grid_searcher3_tests.cpp  triangle_mesh3_tests.cpp  triangle_mesh_to_sdf_tests.cpp  volume_particle_emitter3_tests.cpp
unit_tests.geo/: CMakeLists.txt  animation_tests.cpp  array2_tests.cpp  array_samplers_tests.cpp  array_view1_tests.cpp  blas_tests.cpp  bounding_box2_tests.cpp  bounding_box3_tests.cpp  bvh2_tests.cpp  bvh3_tests.cpp  cell_centered_vector_grid2_tests.cpp  cg_tests.cpp  collider_set2_tests.cpp  custom_implicit_surface2_tests.cpp  custom_implicit_surface3_tests.cpp  cylinder3_tests.cpp  face_centered_grid2_tests.cpp  fdm_cg_solver2_tests.cpp  fdm_cg_solver3_tests.cpp  fdm_iccg_solver2_tests.cpp  fdm_iccg_solver3_tests.cpp  fdm_linear_system_solver_test_helper2.h  implicit_surface_set2_tests.cpp  implicit_surface_set3_tests.cpp  implicit_triangle_mesh3_tests.cpp  level_set_solvers_tests.cpp  main.cpp  marching_cubes_tests.cpp  math_utils_tests.cpp  matrix2x2_tests.cpp  matrix3x3_tests.cpp  matrix4x4_tests.cpp  matrix_tests.cpp  mg_tests.cpp  octree_tests.cpp  particle_system_data2_tests.cpp  particle_system_data3_tests.cpp  particle_system_solvers_tests.cpp  pde_tests.cpp  plane3_tests.cpp  (+25 more)
vox.geometry/: CMakeLists.txt  animation.cpp  animation.h  array-inl.h  array.h  array_samplers-inl.h  array_samplers.h  array_utils-inl.h  array_utils.h  array_view-inl.h  array_view.h  basic_types_generated.h  blas-inl.h  blas.h  bounding_box-inl.h  bounding_box.h  cg-inl.h  cg.h  collider.cpp  collider.h  common.h  constants.h  cpp_utils-inl.h  cpp_utils.h  exceptions.cpp  exceptions.h  factory.cpp  factory.h  fbs_helpers.h  fdm_linear_system2.cpp  fdm_linear_system2.h  fdm_linear_system3.cpp  fdm_linear_system3.h  fdm_linear_system_solver2.h  fdm_linear_system_solver3.h  fdm_mg_linear_system2-inl.h  fdm_mg_linear_system2.cpp  fdm_mg_linear_system2.h  fdm_mg_linear_system3-inl.h  fdm_mg_linear_system3.cpp  (+102 more)
vox.geometry/colliders/: collider_set.cpp  collider_set.h  rigid_body_collider.cpp  rigid_body_collider.h
vox.geometry/fdm_solvers/: fdm_cg_solver2.cpp  fdm_cg_solver2.h  fdm_cg_solver3.cpp  fdm_cg_solver3.h  fdm_gauss_seidel_solver2.cpp  fdm_gauss_seidel_solver2.h  fdm_gauss_seidel_solver3.cpp  fdm_gauss_seidel_solver3.h  fdm_iccg_solver2.cpp  fdm_iccg_solver2.h  fdm_iccg_solver3.cpp  fdm_iccg_solver3.h  fdm_jacobi_solver2.cpp  fdm_jacobi_solver2.h  fdm_jacobi_solver3.cpp  fdm_jacobi_solver3.h  fdm_mg_solver2.cpp  fdm_mg_solver2.h  fdm_mg_solver3.cpp  fdm_mg_solver3.h  fdm_mgpcg_solver2.cpp  fdm_mgpcg_solver2.h  fdm_mgpcg_solver3.cpp  fdm_mgpcg_solver3.h
vox.geometry/fields/: constant_scalar_field.cpp  constant_scalar_field.h  constant_vector_field.cpp  constant_vector_field.h  custom_scalar_field.cpp  (+7 more)
(+1686 files in other folders)
